Bug 371130 - unable to reassign standard shortcut for backspace to "up" instead of "back"
Summary: unable to reassign standard shortcut for backspace to "up" instead of "back"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.08.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-18 16:16 UTC by S. Christian Collins
Modified: 2023-02-11 03:34 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Christian Collins 2016-10-18 16:16:48 UTC
Under KDE4, I would always assign the backspace key to the "up" action, rather than "back" as it is my preferred way of navigating in Dolphin. In Plasma Desktop 5.8.1, however, attempting to reassign this key results in an "Ambiguous shortcut detected" warning.

Reproducible: Always

Steps to Reproduce:
1. Open System Settings -> Shortcuts -> Standard Shortcuts
2. Find the "Back" action (first entry), and disable the alternate shortcut ("Back").
3. Find the "Up" action, and add the alternate shortcut for the backspace key (will show as "Backspace").
4. Open Dolphin. Press backspace key twice.

Actual Results:  
First backspace press activates the "up" action, navigating to the parent folder. Subsequent backspace presses will trigger the error, "The key sequence 'Backspace' is ambiguous. Use 'Configure Shortcuts' from the 'Settings' menu to solve the ambiguity. No action will be triggered."

Expected Results:  
I should be able to reassign "backspace" to activate the "up" rather than the "back" action.

The "back" shortcut is apparently never getting unassigned in step 2 above. The reason the first keypress in step 4 above seems to work is because there is no valid back action until the first folder navigation is made. Once there is a valid target for "back", pressing the backspace key attempts to activate "back" and "up" at the same time, resulting in the error.

My system: KDE Neon 5.8.1 64-bit (Plasma Desktop 5.8.1, KDE Frameworks 5.27.0, Qt 5.7.0)
Comment 1 Christoph Feck 2016-10-19 04:41:12 UTC
Did you already investigate this and comfirmed the issue is in kconfig framework?
Comment 2 S. Christian Collins 2016-10-19 20:21:52 UTC
I'm not sure if kconfig is actually responsible, but I saw other, similar bug reports assigned to frameworks-kconfig, so I followed suit.

Two additional notes:
1. In the original reproduction instructions, step 2 is unnecessary.
2. If you try to assign backspace to "up" from within Dolphin's "configure shortcuts" menu item, an error pops up saying:

"The 'Backspace' shortcut is ambiguous with the following shortcut.
Do you want to assign an empty shortcut to this action?
Shortcut 'Alt+Left' for action 'Back'"

Why 'Backspace' conflicts with 'Alt-Left' is curious, but since this error isn't thrown within the standard shortcuts section in system settings, perhaps this should be re-filed as a Dolphin bug?

I can also confirm that this bug is still present in Plasma Desktop 5.8.2.
Comment 3 S. Christian Collins 2016-10-19 20:23:16 UTC
Oh, and I should also mention that clicking Dolphin's dialog to reassign the shortcut doesn't resolve the conflict.
Comment 4 Christoph Feck 2016-10-19 20:36:09 UTC
Reassigning to Dolphin for investigation.
Comment 5 jingyu9575 2016-11-07 06:40:46 UTC
Same here (dolphin 16.04.3, KDE 5.26.0).

Workaround: there are actually 3 shortcut assigned to back: Alt+Left, "Back", Backspace. However the dialog can only see the first two. If I remove Alt+Left, the last two will shift, allowing me to remove the conflicting Backspace and reassign Backspace to Up.
Comment 6 S. Christian Collins 2016-11-13 04:14:56 UTC
Aah, so the real problem seems to be that not all of the assigned shortcut keys for "Back" are visible in System Settings -> Shortcuts, or the "Configure Shortcuts" option within the individual programs.

Thanks for the workaround, jingyu9575!
Comment 7 Julian Steinmann 2018-04-29 11:46:11 UTC
This is a hard one: on one side we obviously want that users can reassign shortcuts according to their preference. But the only way to fix this bug would be to remove one current shortcut (unless we want to rewrite the KConfig dialog to support more shortcuts for one action) which would then confuse existing users who used the shortcut we removed. I see two ways of going forward:
1. Closing this report & maybe making an edit in the wiki so that all users who would want to do that can use the workaround by jingyu9575, but not actually fixing the problem
2. Removing one shortcut (e.g. Alt+Left) which would free up space for the other two. Users who need the Alt+Left shortcut could still reassign Back/Backspace to Alt+Left, but there could be confusion if this is not expected (which is also bad).

@Christoph What do you think?
Comment 8 Pietro Pizzi 2018-05-03 07:43:49 UTC
OK. The actual solution is not really intuitive ;). I have this (with a lot of anger) some time now till I found this thread. And It is even more confusing because in the 'Standard Shortcuts' list there are 2 'Back' entries.

The best solution should be to implement more columns (Alternate 1, Alternate 2..). But it this is to hard you can eg. show us a pop-up if you hover over an shortcut where there is a hidden 3rd one!?
Comment 9 Julian Steinmann 2018-05-25 15:45:08 UTC
I do agree that adding more columns would probably be the best solution for this specific problem, but this might also easily overwhelm users, so we'd need to do it in a clever, UX-friendly way. For now, I'll set the status of the report to CONFIRMED and maybe this will be implemented at some point.
Comment 10 Forest 2019-09-19 04:37:57 UTC
A cursory look at the code revealed (I think) where the hidden shortcut is being added:
https://github.com/KDE/dolphin/blob/0303df092d93a39122fce82aade93d96d52430dc/src/dolphinmainwindow.cpp#L1315

+1 for fixing this. It wasted several hours of my day while I was test driving KDE, and didn't exactly instill confidence in the platform.

If it's going to take a while to agree on a good UI for exposing all the shortcuts, how about swapping the "Back" and "Backspace" shortcuts for now? That ought to make the "Backspace" shortcut visible, which would avoid the surprising experience of a keyboard shortcut not appearing with all the other standard keyboard shortcuts, and the frustrating experience of a built-in conflict that seems impossible to resolve.

The "Back" action usually comes from a dedicated mouse button or scroll wheel tilt, or (less commonly) from a dedicated button on a keyboard. I expect that remapping it is less common, so giving it the hidden shortcut position would seem to be the lesser evil.
Comment 11 Zdeněk Válek 2019-10-28 12:16:11 UTC
Please fix this bug. It is extremely deceptive and it causes permanent frustration when using Dolphin.
I don' have any alternate shortcut set, it is empty (deleted years ago), yet still I don't see the Backspace being assigned. Only after I remove the primary shortcut, which I wanted to keep, the Backspace get visible in Alternate column and can be removed.
Comment 12 Alex 2019-10-28 14:33:40 UTC
All three shortcuts make sense here and it's a very frequently used action, we shouldn't remove or reassign any of them. The first 2 come from KStandardShortcut and Backspace is specific to Dolphin.

+1 for swapping Backspace and Back as suggested above until this is dealt with outside of Dolphin. This is easy to do but I'm hesitant to submit a patch because with this approach it would appear as if Dolphin is ignoring standard shortcuts in the shortcuts dialog.
Comment 13 Zdeněk Válek 2019-10-28 19:06:29 UTC
Agreed, but we don't need to remove any shortcut. Perfect fix would be to fix the automatic reasignment, which is offered in case someone tries to set the Backspace for something else. It would solve the problem for me if it worked, but it didn't. Automatic reassignment failed silently resulting in ambiguous shortcut.
(I am afraid that I cannot confirm that in my current version, because I have already fixed that and I don't know how to return to the original state without creation of new account.)
Comment 14 Zdeněk Válek 2019-10-28 19:48:20 UTC
OK, I have created a new user account to check this and another bug. This bug is still there (Dolphin 18.08.8 on Debian buster), I mean the automatic reassignment of Backspace issue:
When I attempt to use Backspace for "Up", conflict is detected and reassignment offered.
I choose to reassign, but it fails silently.
Next time I hit Backspace the ambiguous shortcut is reported.(only if the Back action is active, it is not a problem if I just opened Dolphin and did not change folder yet).
Comment 15 Alex 2019-10-29 03:26:50 UTC
I can confirm that issue and there are other bugs as well when having more than 2 assigned shortcuts, but those should go on a separate bug report I suppose.

For now within Dolphin there's little to do about these issues without reassigning or deleting existing shortcuts. We could either swap Backspace and Back shortcuts (still problematic) or reassign Backspace to Up by default (changes behavior on a frequently used existing action).
Comment 16 Pietro Pizzi 2020-05-25 12:49:55 UTC
Or, please, make that additional columns! 3 1/2 years ... HHCIB?

And no, I wouldn't imagine a world where a linux user is such a DAU that "this might also easily overwhelm users" can be true! WTF ... more then 2 options could be to much for some human beings now a days, we are doomed.
Comment 17 Julius R. 2022-12-13 18:28:11 UTC
+1 for swapping Backspace and Back. Count me in on this one. This is hellishly annyoing.
Comment 18 Bug Janitor Service 2023-02-06 02:46:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/502
Comment 19 Méven Car 2023-02-09 11:17:51 UTC
Git commit c57c5384fcab92a1ba0d8fd87321ce7cb148ca02 by Méven Car, on behalf of Forest ix.
Committed on 09/02/2023 at 11:17.
Pushed by meven into branch 'master'.

Reveal the Backspace shortcut in the UI

Since the Back action already has two standard shortcuts, a third one appended
to the list will be invisible in the UI, which shows only the first two.  This
leaves users unable to reassign it.

We therefore make it the first shortcut in the list, so that the hidden third
entry will be the dedicated Back button, which users are far less likely to
want reassigned.

M  +2    -1    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/commit/c57c5384fcab92a1ba0d8fd87321ce7cb148ca02